页面文件提示分页与分页条水平对齐

--- a/src/app/manager/itemmanager/addExam/add-exam.component.html
+++ b/src/app/manager/itemmanager/addExam/add-exam.component.html
@@ -68,7 +68,7 @@
     <div class="form-group">
       <div class="col-md-11">
         <label class="radio-inline">
-          <input name="choice" type="radio" (click)="changeGenre('exclusive')" value="exclusive" checked="checked" formControlName="choice"> 单选题
+          <input name="choice" type="radio" (click)="changeGenre('single')" value="single" checked="checked" formControlName="choice"> 单选题
         </label>
         <label class="radio-inline">
           <input name="choice" type="radio" (click)="changeGenre('multiple')" value="multiple" formControlName="choice"> 多选题
