--- a/src/app/unitexam/unitexam.component.html
+++ b/src/app/unitexam/unitexam.component.html
@@ -25,7 +25,9 @@
 <app-loginmodal #loginModal></app-loginmodal>
 
 <!-- 进度条组件 -->
-<app-progress #progress *ngIf="progressStatus" ></app-progress>
+<!--<div [el-loading]="true">-->
+  <!--<el-tag>加载中..</el-tag>-->
+<!--</div>-->
 
 <!--试题列表-->
 <div class="row" [@flyIn]="'active'">
