ng4升级ng5更改代码

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,7 +98,7 @@
 <!--页头结束-->
 
 <!-- 主体内容区域 -->
-<div class="container container-fluid">
+<div class="container container-fluid" id="main">
   <!--RouterOutlet - 路由插座,显示路由器生成的视图。在展示父路由的位置中的某个地方展示子路由对应的地方。-->
   <router-outlet></router-outlet>
 </div>
