--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,12 +2,18 @@
     页脚
     ------------------------------------*/
 html {
-  position: absolute;
   min-height: 100%;
 }
 body {
   margin-bottom: 200px;
+  min-height: 100%;
 }
+
+#main {
+  margin-bottom: 200px;
+  min-height: 100%;
+}
+
 .footer {
   border-top: 1px solid #e5e5e5;
   color: #777;
@@ -15,7 +21,7 @@ body {
   background-color: #f5f5f5;
   position: relative;
   bottom: 0;
+  clear: both;
   width: 100%;
-  height: 200px;
   z-index: 2;
 }
