--- a/src/app/common/loginmodal/loginmodal.component.html
+++ b/src/app/common/loginmodal/loginmodal.component.html
@@ -164,7 +164,7 @@
         <div class="row">
           <div class="col-md-6">
             <div>
-            其他账号登陆：<img class="third_party" src="/assets/qq_connect.png" alt=""><img class="third_party" src="/assets/chat_connect.png" alt=""><img class="third_party" src="/assets/zhifubao_connect.png" alt="">
+            其他账号登陆：<img class="third_party" src="/assets/image/third_party/qq_connect.png" alt=""><img class="third_party" src="/assets/image/third_party/chat_connect.png" alt=""><img class="third_party" src="/assets/image/third_party/zhifubao_connect.png" alt="">
           </div>
           </div>
           <div class="col-md-6">
