--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -3,10 +3,10 @@
     <div class="col-md-1">
       <aside class="sidebar show perfectScrollbar">
         <div id="solso-sidebar">
-          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+          <div class="card-group" id="accordion" role="tablist" aria-multiselectable="true">
 
-            <div class="panel panel-default">
-              <div class="panel-heading" role="tab">
+            <div class="card">
+              <div class="card-header " role="tab">
                 <div class="input-group custom-search-form">
                   <input type="text" class="form-control" placeholder="Search..." />
                   <span class="input-group-btn">
@@ -18,9 +18,9 @@
               </div>
             </div>
 
-            <div class="panel panel-default" routerLinkActive="active">
-              <div class="panel-heading" role="tab" id="heading1">
-                <h4 class="panel-title">
+            <div class="card" routerLinkActive="active">
+              <div class="card-header " role="tab" id="heading1">
+                <h4 class="card-title">
                   <a href="javascript:void(0)" class="single-item" [routerLink]="['/manager/dashboard']">
                     <i class="fa fa-dashboard"></i> 主面板
                   </a>
@@ -28,9 +28,9 @@
               </div>
             </div>
 
-            <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="heading2">
-                <h4 class="panel-title">
+            <div class="card">
+              <div class="card-header " role="tab" id="heading2">
+                <h4 class="card-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="true" aria-controls="collapse2">
                     <i class="fa fa-bar-chart-o"></i> 试题管理
                     <i class="pull-right fa fa-caret-down"></i>
@@ -38,7 +38,7 @@
                 </h4>
               </div>
 
-              <div id="collapse2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading2">
+              <div id="collapse2" class="card-collapse collapse in" role="tabcard" aria-labelledby="heading2">
                 <div>
                   <a href="javascript:void(0)" class="list-group-item" [routerLink]="['/manager/addExam']">新增试题</a>
                   <a href="javascript:void(0)" class="list-group-item" [routerLink]="['/manager/updExam']">编辑试题</a>
@@ -46,9 +46,9 @@
               </div>
             </div>
 
-            <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="heading3">
-                <h4 class="panel-title">
+            <div class="card">
+              <div class="card-header " role="tab" id="heading3">
+                <h4 class="card-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="true" aria-controls="collapse3">
                     <i class="fa fa-bar-chart-o"></i> 用户管理
                     <i class="pull-right fa fa-caret-down"></i>
@@ -56,7 +56,7 @@
                 </h4>
               </div>
 
-              <div id="collapse3" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading3">
+              <div id="collapse3" class="card-collapse collapse in" role="tabcard" aria-labelledby="heading3">
                 <div>
                   <a href="javascript:void(0)" class="list-group-item" [routerLink]="['/manager/updUser']">用户管理</a>
                 </div>
