--- a/src/app/usercenter/usercenter.component.css
+++ b/src/app/usercenter/usercenter.component.css
@@ -63,7 +63,7 @@
 }
 .loading{
   border: 1px solid #D1D1D1;
-  background:url(./img/loading.gif) no-repeat center;
+  background:url(/assets/image/upload_header_img/loading.gif) no-repeat center;
 }
 .up-opcity{
   opacity: 0;
