--- a/src/app/util/util.component.html
+++ b/src/app/util/util.component.html
@@ -1,10 +1,10 @@
 <!--计算器组件-->
 <app-calculator></app-calculator>
 
-<div class="panel panel-default" style="position: fixed">
-  <div class="panel-body">
+<div class="card" style="position: fixed">
+  <div class="card-block">
     <button type="button" class="btn btn-info" (click)="chooseModel()">提交</button>
-    <a type="button" class="btn btn-info" (click)="downloadItem()">下载试题</a>
+    <button class="btn btn-info-outline" (click)="downloadItem()">下载试题</button>
   </div>
 </div>
 
